...
import { HDSegwitBech32Wallet, MultisigHDWallet, WatchOnlyWallet } from '../../../class';
import DocumentPicker from 'react-native-document-picker';
import DeeplinkSchemaMatch from '../../../class/deeplink-schema-match';
import loc, { formatBalance, formatBalanceWithoutSuffix } from '../../../loc';
import CoinsSelected from '../../components/CoinsSelected';
import BottomModal from '../../components/BottomModal';
import AddressInput from '../../components/AddressInput';
import AmountInput from '../../components/AmountInput';
import InputAccessoryAllFunds from '../../components/InputAccessoryAllFunds';
import { AbstractHDElectrumWallet } from '../../../class/wallets/abstract-hd-electrum-wallet';
import { BlueStorageContext } from '../../../blue_modules/storage-context';
import ToolTipMenu from '../../components/TooltipMenu';
const currency = require('../../../blue_modules/currency');
...
    scrollView.current.flashScrollIndicators();
    if (last && Platform.OS === 'android') scrollView.current.scrollToEnd(); // fix white screen on android
  };

  const handleCoinControl = () => {
    setOptionsVisible(false);
    navigation.navigate('CoinControl', {
      walletID: wallet.getID(),
      onUTXOChoose: (utxo) => setUtxo(utxo),
    });
  };

  const handlePsbtSign = async () => {
...
            disabled={isLoading}
            style={styles.advancedOptions}
            onPress={() => {
              Keyboard.dismiss();
              setOptionsVisible(true);
            }}
            testID="advancedOptionsMenuButton"
          >
            <Icon size={22} name="kebab-horizontal" type="octicon" color={colors.foregroundColor} />
          </TouchableOpacity>
        ),
      }),
    });
...
                    {rate} {loc.units.sat_vbyte}
                  </Text>
                </View>
              </TouchableOpacity>
            ))}
            <TouchableOpacity
              testID="feeCustom"
              accessibilityRole="button"
              style={styles.feeModalCustom}
              onPress={async () => {
                let error = loc.send.fee_satvbyte;
                while (true) {
                  let fee;
...
    const isSendMaxUsed = addresses.some((element) => element.amount === BitcoinUnit.MAX);

    return (
      <BottomModal deviceWidth={width + width / 2} isVisible={optionsVisible} onClose={hideOptions}>
        <KeyboardAvoidingView enabled={!Platform.isPad} behavior={Platform.OS === 'ios' ? 'position' : null}>
          <View style={[styles.optionsContent, stylesHook.optionsContent]}>
            {isEditable && <BlueListItem testID="sendMaxButton" disabled={balance === 0 || isSendMaxUsed} title={loc.send.details_adv_full} hideChevron component={TouchableOpacity} onPress={onUseAllPressed} />}
            {wallet.type === HDSegwitBech32Wallet.type && isEditable && <BlueListItem title={loc.send.details_adv_fee_bump} Component={TouchableWithoutFeedback} switch={{ value: isTransactionReplaceable, onValueChange: onReplaceableFeeSwitchValueChanged }} />}
            {wallet.type === WatchOnlyWallet.type && wallet.isHd() && <BlueListItem title={loc.send.details_adv_import} hideChevron component={TouchableOpacity} onPress={importTransaction} />}
            {wallet.type === WatchOnlyWallet.type && wallet.isHd() && <BlueListItem testID="ImportQrTransactionButton" title={loc.send.details_adv_import_qr} hideChevron component={TouchableOpacity} onPress={importQrTransaction} />}
            {wallet.type === MultisigHDWallet.type && isEditable && <BlueListItem title={loc.send.details_adv_import} hideChevron component={TouchableOpacity} onPress={importTransactionMultisig} />}
            {wallet.type === MultisigHDWallet.type && wallet.howManySignaturesCanWeMake() > 0 && isEditable && <BlueListItem title={loc.multisig.co_sign_transaction} hideChevron component={TouchableOpacity} onPress={importTransactionMultisigScanQr} />}
            {isEditable && (
              <>
                <BlueListItem testID="AddRecipient" title={loc.send.details_add_rec_add} hideChevron component={TouchableOpacity} onPress={handleAddRecipient} />
                <BlueListItem testID="RemoveRecipient" title={loc.send.details_add_rec_rem} hideChevron disabled={addresses.length < 2} component={TouchableOpacity} onPress={handleRemoveRecipient} />
              </>
            )}
            <BlueListItem testID="CoinControl" title={loc.cc.header} hideChevron component={TouchableOpacity} onPress={handleCoinControl} />
            {wallet.allowCosignPsbt() && isEditable && <BlueListItem testID="PsbtSign" title={loc.send.psbt_sign} hideChevron component={TouchableOpacity} onPress={handlePsbtSign} />}
          </View>
        </KeyboardAvoidingView>
      </BottomModal>
    );
  };

  const renderCreateButton = () => {
    return <View style={styles.createButton}>{isLoading ? <ActivityIndicator /> : <BlueButton onPress={createTransaction} title={loc.send.details_next} testID="CreateTransactionButton" />}</View>;
  };

  const renderWalletSelectionOrCoinsSelected = () => {
    if (walletSelectionOrCoinsSelectedHidden) return null;
    if (utxo !== null) {
      return (
...
        <View>
          <KeyboardAvoidingView enabled={!Platform.isPad} behavior="position">
            <FlatList keyboardShouldPersistTaps="always" scrollEnabled={addresses.length > 1} data={addresses} renderItem={renderBitcoinTransactionInfoFields} ref={scrollView} horizontal pagingEnabled removeClippedSubviews={false} onMomentumScrollBegin={Keyboard.dismiss} onMomentumScrollEnd={handleRecipientsScrollEnds} onScroll={handleRecipientsScroll} scrollEventThrottle={200} scrollIndicatorInse
            <View style={[styles.memo, stylesHook.memo]}>
              <TextInput onChangeText={setTransactionMemo} placeholder={loc.send.details_note_placeholder} placeholderTextColor="#81868e" value={transactionMemo} numberOfLines={1} style={styles.memoText} editable={!isLoading} onSubmitEditing={Keyboard.dismiss} inputAccessoryViewID={BlueDismissKeyboardInputAccessory.InputAccessoryViewID} />
            </View>
            <TouchableOpacity testID="chooseFee" accessibilityRole="button" onPress={() => setIsFeeSelectionModalVisible(true)} disabled={isLoading} style={styles.fee}>
              <Text style={[styles.feeLabel, stylesHook.feeLabel]}>{loc.send.create_fee}</Text>

              {networkTransactionFeesIsLoading ? (
                <ActivityIndicator />
              ) : (
                <View style={[styles.feeRow, stylesHook.feeRow]}>
...
